<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_fuel">

    <fragment
        android:id="@+id/nav_fuel"
        android:name="com.example.katzen.ui.gasolina.FuellFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_payment_card"
        android:name="com.example.katzen.ui.card.PaymetCardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.katzen.ui.medical.MedicalFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_viajes"
        android:name="com.example.katzen.ui.viajes.ViajesFragment"
        android:label="@string/menu_viajes"
        tools:layout="@layout/fragment_viajes" />
    <fragment
        android:id="@+id/nav_example"
        android:name="com.example.katzen.ui.example.ExampleFragment"
        android:label="@string/menu_example"
        tools:layout="@layout/example_fragment" />
</navigation>